<resources>
    <string name="app_name">Rhythm Run</string>

    <string name="app_subtitle">Follow the beat</string>

    <string name="title_activity_home">Rhythm Run</string>
    <string name="home_distance_this_week">this week</string>
    <string name="home_average_pace">average pace</string>
    <string name="home_average_speed">average speed</string>

    <string name="unit_pace">/%1$s</string>
    <string name="unit_speed">%1$s/h</string>

    <string name="pace">%1$s /%2$s</string>
    <string name="speed">%1$s %2$s/h</string>
    <string name="distance">%1$s %2$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home_new_run">New Run</string>
    <string name="title_activity_new_run">New Run</string>
    <string name="new_run_pace">Pace</string>
    <string name="new_run_speed">Speed</string>
    <string name="new_run_itinerary">Itinerary</string>
    <string name="new_run_music">Music</string>
    <string name="new_run_random">Random</string>
    <string name="new_run_free">Free</string>
    <string name="new_run_delete_marker">Delete marker</string>
    <string name="new_run_route">Route</string>

    <string name="title_activity_recap">Recap</string>
    <string name="recap_selected_pace">Pace</string>
    <string name="recap_selected_speed">Speed</string>
    <string name="recap_selected_distance">Distance</string>
    <string name="recap_selected_music">Music</string>
    <string name="recap_free">Free</string>
    <string name="recap_button_go">GO</string>
    <string name="recap_warning">Warning: this might be too hard for you! Consider
        slowing down a bit!</string>

    <string name="title_activity_run">Run</string>
    <string name="run_play">Play</string>
    <string name="run_pause">Pause</string>
    <string name="run_heart_rate">%1$.0f bpm</string>
    <string name="run_bpm">%1$d bpm</string>

    <string name="title_activity_library">Library</string>
    <string name="menu_library_refresh">Refresh</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_units">Units</string>
    <string-array name="pref_unit_titles">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string-array name="pref_unit_values">
        <item>km</item>
        <item>mi</item>
    </string-array>

    <string name="pref_title_pace">Speed display</string>
    <string-array name="pref_pace_titles">
        <item>Pace</item>
        <item>Speed</item>
    </string-array>
    <string-array name="pref_pace_values">
        <item>p</item>
        <item>s</item>
    </string-array>

    <string name="pref_title_gender">Gender</string>
    <string-array name="pref_gender_titles">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="pref_gender_values">
        <item>M</item>
        <item>F</item>
    </string-array>

    <string name="title_activity_about">About</string>
    <string name="about_description">Are you interested in listening to music while running?
        Would you like to hear a music adapted to your own rhythm ?  This application is created
        for you. You can choose the kind of music you’d prefer in the application’s library, add
        songs you’re keen on, choose an itinerary, eventually a rhythm if you want to and decide
        to begin a new run.  The application will save all of your records and grant you music
        that follows your own rhythm.</string>

    <string name="title_activity_login">Sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="when_you_sign_in">When you sign in, you can check your previous records and save your current run.</string>

    <string name="title_activity_historique">Activity</string>

    <string name="title_activity_sum_up">Last Run</string>

    <string name="title_activity_history_run">Activity</string>
    <string name="logged_out">Vous avez été déconnecté avec succès !</string>

</resources>
