<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/secondary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textSecondary"
                android:fontFamily="@string/font_family_thin"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_in"/>

            <EditText
                android:id="@+id/user_edittext__login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/textSecondary"
                android:foregroundTint="@color/textSecondary"
                android:hint="@string/login"
                android:textColor="@color/textSecondary"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/password_edittext__login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:backgroundTint="@color/textSecondary"
                android:foregroundTint="@color/textSecondary"
                android:textColor="@color/textSecondary"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/connect_button__login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/log_in"
                android:layout_gravity="right"
                android:textColor="@color/textSecondary"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textSecondary"
                android:fontFamily="@string/font_family_thin"
                android:textAlignment="center"
                android:text="@string/when_you_sign_in"/>

        </LinearLayout>

        <Button
            android:id="@+id/register_button__login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/register"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/textSecondary"
            android:textSize="15sp"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>