<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newRunScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raphaelattali.rhythmrun.Android_activities.NewRunActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/newRunMusicHeader"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/newRunMusicTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textSize="15sp"
                        android:textColor="@color/textPrimary"
                        android:text="@string/new_run_music" />

                    <TextView
                        android:id="@+id/newRunMusicSelection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="100dp"
                        android:layout_alignBaseline="@id/newRunMusicTitle"
                        android:textSize="15sp"
                        android:textColor="@color/textLight" />

                    <ImageButton
                        android:id="@+id/newRunMusicDownArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:tint="@color/textPrimary"
                        android:src="@drawable/ic_down_arrow" />

                </RelativeLayout>

                <com.github.aakira.expandablelayout.ExpandableLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="14dp"
                    android:orientation="vertical"
                    android:id="@+id/newRunMusicContent"
                    app:ael_expanded="true"
                    app:ael_duration="300"
                    app:ael_orientation="vertical">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/newRunMusicCheckbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textSize="13sp"
                            android:textColor="@color/textPrimary"
                            android:text="@string/new_run_random"/>

                        <Spinner
                            android:id="@+id/newRunMusicSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/newRunMusicCheckbox"
                            android:layout_alignParentLeft="true"/>

                    </RelativeLayout>

                </com.github.aakira.expandablelayout.ExpandableLinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/newRunPaceHeader"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/newRunPaceTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textSize="15sp"
                        android:textColor="@color/textPrimary"
                        android:text="@string/new_run_pace" />

                    <TextView
                        android:id="@+id/newRunPaceSelection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="100dp"
                        android:layout_alignBaseline="@id/newRunPaceTitle"
                        android:textSize="15sp"
                        android:textColor="@color/textLight"/>

                    <ImageButton
                        android:id="@+id/newRunPaceDownArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:tint="@color/textPrimary"
                        android:src="@drawable/ic_down_arrow" />

                </RelativeLayout>

                <com.github.aakira.expandablelayout.ExpandableLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="14dp"
                    android:orientation="vertical"
                    android:id="@+id/newRunPaceContent"
                    app:ael_expanded="true"
                    app:ael_duration="300"
                    app:ael_orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <SeekBar
                            android:id="@+id/newRunPaceSeekbar"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:progress="50"/>

                        <CheckBox
                            android:id="@+id/newRunPaceFree"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:textColor="@color/textPrimary"
                            android:text="@string/new_run_free"/>

                    </LinearLayout>

                </com.github.aakira.expandablelayout.ExpandableLinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/newRunItineraryHeader"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/newRunItineraryTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textSize="15sp"
                        android:textColor="@color/textPrimary"
                        android:text="@string/new_run_itinerary" />

                    <TextView
                        android:id="@+id/newRunItinerarySelection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="100dp"
                        android:layout_alignBaseline="@id/newRunItineraryTitle"
                        android:textSize="15sp"
                        android:textColor="@color/textLight"
                        android:text="0 km"/>

                    <ImageButton
                        android:id="@+id/newRunItineraryDownArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:tint="@color/textPrimary"
                        android:src="@drawable/ic_down_arrow" />

                </RelativeLayout>

                <com.github.aakira.expandablelayout.ExpandableLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="14dp"
                    android:orientation="vertical"
                    android:id="@+id/newRunItineraryContent"
                    app:ael_expanded="true"
                    app:ael_duration="300"
                    app:ael_orientation="vertical">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <fragment
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:layout_marginBottom="14dp"
                            android:name="com.example.raphaelattali.rhythmrun.Android_activities.ItineraryFragment"
                            android:id="@+id/newRunItineraryFragment" />

                        <Button
                            android:id="@+id/newRunItineraryButtonDirection"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_below="@id/newRunItineraryFragment"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/flat_button"
                            android:textColor="@color/primary"
                            android:text="@string/new_run_route"/>

                        <Button
                            android:id="@+id/newRunItineraryButtonMarker"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:layout_below="@id/newRunItineraryFragment"
                            android:layout_toLeftOf="@id/newRunItineraryButtonDirection"
                            android:background="@drawable/flat_button"
                            android:textColor="@color/primary"
                            android:text="@string/new_run_delete_marker"/>

                    </RelativeLayout>

                </com.github.aakira.expandablelayout.ExpandableLinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
